@@ -1,0 +1,8 @@
+# PPC G4 on MacOS X 10.1
+TARGETOS = ppc-unknown-macosx10
+HOSTOS = ppc-unknown-macosx10
+
+SDCCCONFIGUREFLAGS = --disable-ucsim
+
+TARGETCC  = cc
+TARGETCXX = c++
